idf_component_register(SRCS "main.c"
"innotech/device/innotech_device.c"
"innotech/lcd/innotech_lcd.c"
"innotech/lcd//st7701/esp_lcd_panel_io_3wire_spi.c"
"innotech/lcd//st7701/esp_lcd_st7701.c"
"innotech/lcd//st7701/esp_io_expander.c"
"innotech/lcd//st7701/esp_io_expander_tca9554.c"
"innotech/config/innotech_config.c"
"innotech/relay/innotech_relay.c"
"innotech/button/innotech_button.c"
"innotech/ble/innotech_ble.c"
"innotech/wifi/innotech_wifi.c"
"innotech/wifi/innotech_mqtt_json.c"
"innotech/rtc/innotech_rtc.c"
"innotech/utils/innotech_utils.c"
"innotech/factory/innotech_factory.c"
"innotech/meter/innotech_meter.c"
"innotech/api_bridge/api_bridge.c"
                    INCLUDE_DIRS "."
                    "./innotech/device"
                    "./innotech/lcd"
                    "./innotech/lcd/st7701"
                    "./innotech/config"
                    "./innotech/relay"
                    "./innotech/button"
                    "./innotech/ble"
                    "./innotech/wifi"
                    "./innotech/rtc"
                    "./innotech/utils"
                    "./innotech/factory"
                    "./innotech/meter"
                    "./innotech/api_bridge")
