idf_component_register(

SRC_DIRS
        "."
        "innotech/device"
        "innotech/lcd"
        "innotech/config"
        "innotech/relay"
        "innotech/meter"
        "innotech/button"
        "innotech/ble"
        "innotech/rtc"
        "innotech/wifi"
        "innotech/ota"
        "innotech/utils"
        "innotech/api_bridge"
        "innotech/factory"
        "innotech/weather"
        "innotech/lcd/ui"
        "innotech/lcd/ui/screens"
        "innotech/lcd/ui/images"
        "innotech/lcd/ui/fonts"
        "innotech/lcd/ui/components"
                    INCLUDE_DIRS "."
                    "./innotech/device"
                    "./innotech/rtc"
                    "./innotech/lcd"
                    "./innotech/config"
                    "./innotech/relay"
                    "./innotech/button"
                    "./innotech/ble"
                    "./innotech/wifi"
                    "./innotech/ota"
                    "./innotech/rtc"
                    "./innotech/meter"
                    "./innotech/factory"
                    "./innotech/weather"
                    "./innotech/utils"                    
                    "./innotech/api_bridge"
                    "./innotech/lcd/ui")
