idf_component_register(SRC_DIRS "."
"./innotech/device"
"./innotech/lcd"
"./innotech/api_bridge"
"./innotech/config"
                    INCLUDE_DIRS "."
                    "./innotech/device"
                    "./innotech/lcd"
                    "./innotech/api_bridge"
                    "./innotech/config")
